updateMember에서 수정할 데이터만 담아서 보내도록 수정