@@ -30,7 +30,7 @@ dependencies {
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'org.mockito:mockito-core'
+    testImplementation 'org.mockito:mockito-core:5.18.0'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.thymeleaf:thymeleaf-spring6:3.1.1.RELEASE'
@@ -57,9 +57,34 @@ dependencies {
     implementation 'com.nimbusds:nimbus-jose-jwt:10.0.1'
 }
 
-tasks.named('test') {
+test {
     useJUnitPlatform()
+
+    // 테스트 로깅 설정
+    testLogging {
+        events "passed", "skipped", "failed", "standardOut", "standardError"
+        exceptionFormat "full"
+        showCauses true
+        showExceptions true
+        showStackTraces true
+        showStandardStreams true
+
+        // 각 테스트의 정보 출력
+        info {
+            events "started", "passed", "skipped", "failed", "standardOut", "standardError"
+            displayGranularity 2
+        }
+    }
+
+    // 테스트가 실패해도 모든 테스트 실행
+    ignoreFailures = true
 }
 
+
 tasks.getByName("jar").enabled = false
+
+test {
+    jvmArgs = ['-XX:+EnableDynamicAgentLoading']
+}
+
 
